# hand-control-vst

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/: RELEASE_BODY.md
.github/workflows/: build.yml
cmake/: FetchHandModels.cmake  FetchOnnxRuntime.cmake
docs/: MEDIAPIPE_INTEGRATION.md  ML_PIPELINE.md  OSCHANDCONTROL_MATH.md
installer/macos/: build_pkg.sh
installer/windows/: HandControl.wxs  build_msi.ps1
plugin/: CMakeLists.txt
plugin/Source/Midi/: MidiCcSender.cpp  MidiCcSender.h
plugin/Source/Params/: ParameterBridge.cpp  ParameterBridge.h  ParameterIDs.h  ParameterLayout.cpp  ParameterLayout.h
plugin/Source/Plugin/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
plugin/Source/Tracking/: CameraSource.cpp  CameraSource.h  HandIdentityTracker.cpp  HandIdentityTracker.h  HandTrackerThread.cpp  HandTrackerThread.h  IHandTracker.h  ImagePreprocess.cpp  ImagePreprocess.h  Landmarks.h  MockHandTracker.cpp  MockHandTracker.h  Normalizer.cpp  Normalizer.h  OneEuroFilter.cpp  OneEuroFilter.h  OnnxHandTracker.cpp  OnnxHandTracker.h  OrtDelayLoad.cpp  PalmAnchors.cpp  PalmAnchors.h  Roi.cpp  Roi.h  TFLiteHandTracker.cpp  TFLiteHandTracker.h
plugin/Source/UI/: MidiMapPanel.cpp  MidiMapPanel.h  ParameterMeter.cpp  ParameterMeter.h  PreviewComponent.cpp  PreviewComponent.h  StatusBar.cpp  StatusBar.h  Theme.cpp  Theme.h
tests/: CMakeLists.txt  HandIdentityTrackerTests.cpp  MidiCcSenderTests.cpp  NormalizerTests.cpp  OneEuroFilterTests.cpp  RoiTests.cpp  TestMain.h
